--- a/phpvoyage/src/app/navbar/navbar.component.html
+++ b/phpvoyage/src/app/navbar/navbar.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-<nav class="navbar navbar-expand-lg navbar-dark">
-    <a [routerLink]="['/']" class="navbar-brand" ><h2><i class="fas fa-globe-europe mr-3"></i> PHP - Voyage</h2></a>
-   </nav>
-   </div>
+  <nav>
+    <a [routerLink]="['']">Accueil</a> | <a [routerLink]="['cities']">Cities</a>
+  </nav>
+  <hr>
+  <router-outlet></router-outlet>
+</div>
