Front formulaire fini

--- a/phpvoyage/src/app/city-list/city-list.component.html
+++ b/phpvoyage/src/app/city-list/city-list.component.html
@@ -9,7 +9,7 @@
               <p class="card-text">{{city.contry.name}}</p>
               <hr>
               <strong>Hôtels</strong>
-              <p *ngFor="let hosting of city.hostings" class="card-text">{{hosting.address}}</p>
+              <p *ngFor="let hosting of city.hostings" class="card-text">{{hosting.name}}</p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
