--- a/phpvoyage/src/app/home/home.component.html
+++ b/phpvoyage/src/app/home/home.component.html
@@ -1,37 +1,78 @@
 <form id=formsearch>
-<div class="row">
-        <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Continent :</h5>
-                  <div *ngFor="let continent of continents"  class="form-check">
-                  <input class="form-check-input" type="checkbox" value="{{continent.name}}" id="checkcontinent">
-  <label class="form-check-label" for="checkcontinent">
-     {{continent.name}}
-  </label>
-  </div>
-                  
-                </div>
-              </div>
-              <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title">Pays :</h5>
-                      <div *ngFor="let pays of lepays"  class="form-check">
-                      <input class="form-check-input" type="checkbox" value="{{pays.name}}" id="checkcountry">
-      <label class="form-check-label" for="checkcountry">
-         {{pays.name}}
-      </label>
+  <div class="d-flex flex-row justify-content-around">
+    <div class="card col-3">
+      <div class="card-body">
+        <h5 class="card-title">Continent :</h5>
+        <div *ngFor="let continent of continents" class="form-check">
+          <input class="form-check-input" type="checkbox" value="{{continent.name}}" id="checkcontinent">
+          <label class="form-check-label" for="checkcontinent">
+            {{continent.name}}
+          </label>
+        </div>
+
       </div>
-                      
-                    </div>
-                  </div>
-              
-                  <div class="card">
-                        <div class="card-body">
-                          <h5 class="card-title">Type d'activité :</h5>
-                          <select name="activite" form="formsearch">
-                                <option *ngFor="let activite of activites" value="{{activite.name}}">{{activite.name}}</option>
-                              </select>
-                        </div>
-                      </div>
-              </div>
-              </form>
+    </div>
+    <div class="card col-3">
+      <div class="card-body">
+        <h5 class="card-title">Pays :</h5>
+        <select class="custom-select custom-select-lg mb-3">
+          <option *ngFor="let pays of lespays" value="{{pays.name}}">{{pays.name}}</option>
+        </select>
+
+      </div>
+    </div>
+    <div class="card col-3">
+      <div class="card-body">
+        <h5 class="card-title">Type d'activité :</h5>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="Sport" id="checkactivite">
+          <label class="form-check-label" for="checkactivite">Sport
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="Visite" id="checkactivite">
+          <label class="form-check-label" for="checkactivite">Visite
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="Detente" id="checkactivite">
+          <label class="form-check-label" for="checkactivite">Détente
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="Jeux" id="checkactivite">
+          <label class="form-check-label" for="checkactivite">Jeux
+          </label>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <div class="d-flex flex-row justify-content-around mt-5">
+    <div class="card col-5">
+      <div class="card-body">
+          <h5 class="card-title">Prix :</h5>
+    <div class="slidecontainer">
+      <input type="range" min="10" max="10000" value="5000" class="slider range" id="barreprix" name="prix" oninput="resultprix.value=parseInt(prix.value)"/>
+        <output name="resultprix">--</output> €
+    </div>
+    <h5 class="card-title mt-4">Température :</h5>
+    <div class="slidecontainer">
+        <input type="range" min="-55" max="55" value="0" class="slider range" id="barretemp" name="temp" oninput="resulttemp.value=parseInt(temp.value)"/>
+          <output name="resulttemp">--</output> °C
+      </div>
+  </div>
+  </div>
+</div>
+<div class="text-center mt-3">
+    <button type="submit" class="btn btn-success btn-lg">Rechercher</button>
+</div>
+</form>
+<script>
+    $(function() {
+      $('.range').next().text('--'); // Valeur par défaut
+      $('.range').on('input', function() {
+        var $set = $(this).val();
+        $(this).next().text($set);
+      });
+    });</script>
