Mise en place des icones type activité

--- a/phpvoyage/src/app/home/home.component.html
+++ b/phpvoyage/src/app/home/home.component.html
@@ -24,24 +24,24 @@
     <div class="card col-3">
       <div class="card-body">
         <h5 class="card-title">Type d'activité :</h5>
-        <div class="form-check">
+        <div class="form-check m-2">
           <input class="form-check-input" type="checkbox" name="typacti" value="Sport" id="checkactivite">
-          <label class="form-check-label" for="checkactivite">Sport
+          <label class="form-check-label" for="checkactivite"><i class="fa fa-running"></i> Sport
           </label>
         </div>
-        <div class="form-check">
+        <div class="form-check m-2">
           <input class="form-check-input" type="checkbox" name="typacti" value="Visite" id="checkactivite">
-          <label class="form-check-label" for="checkactivite">Visite
+          <label class="form-check-label" for="checkactivite"><i class="fa fa-archway"></i> Visite
           </label>
         </div>
-        <div class="form-check">
+        <div class="form-check m-2">
           <input class="form-check-input" type="checkbox" name="typacti" value="Detente" id="checkactivite">
-          <label class="form-check-label" for="checkactivite">Détente
+          <label class="form-check-label" for="checkactivite"><i class="fa fa-umbrella-beach"></i> Détente
           </label>
         </div>
-        <div class="form-check">
+        <div class="form-check m-2">
           <input class="form-check-input" type="checkbox" name="typacti" value="Jeux" id="checkactivite">
-          <label class="form-check-label" for="checkactivite">Jeux
+          <label class="form-check-label" for="checkactivite"><i class="fa fa-dice"></i> Jeux
           </label>
         </div>
 
